# Crosspoint-Emulator

./: .gitignore  CMakeLists.txt  README.md
docs/: control-stdio.md
sim/include/: ArduinoStub.h  BLEDevice.h  BLERemoteCharacteristic.h  ESP.h  FreeRTOSStub.h  HalDisplay.h  HalGPIO.h  HalPowerManager.h  HalStorage.h  HalSystem.h  HardwareSerial.h  NetworkUdp.h  SdFat.h  WString.h  WebServer.h  WiFi.h  WiFiClient.h  esp_heap_caps.h  esp_system.h  msvc_compat.h  qrcode.h  sim_display.h  sim_gpio_control.h  sim_heap.h
sim/src/: arduino_stub.cpp  freertos_stub.cpp  http_downloader_stub.cpp  main_sim.cpp  obfuscation_utils_stub.cpp  sim_display.cpp  sim_gpio.cpp  sim_heap.cpp  sim_storage.cpp  uzlib_checksums_stub.cpp  web_server.cpp  webdav_handler_stub.cpp  wifi_stub.cpp
tools/: online-library-benchmark.ps1  online-library-ram-sweep.ps1  online-library-smoke.ps1  remote-smoke.ps1
